// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityBaseDetails fallbacks renders component with blend 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Complements
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Conflicts
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Best Work Environments
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="complements"
    >
      <option
        value="complements"
      >
        Complements
      </option>
      <option
        value="conflicts"
      >
        Conflicts
      </option>
      <option
        value="best_work_environments"
      >
        Best Work Environments
      </option>
    </select>
    <div>
      <div
        className="p"
      >
        You often find yourself working with other Naturalists as you try to work outdoors as much as possible and find your like-minded colleagues alongside you.  You also enjoy working with other Analyzers whose shared cerebral interests find you having many things in common. You appreciate your Planner colleagues as well.  They take care of managing the details so you can think through the big picture of a project and then get started on it right away.

      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityBaseDetails fallbacks renders component with types 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Best Work Environments
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="best_work_environments"
    >
      <option
        value="best_work_environments"
      >
        Best Work Environments
      </option>
    </select>
    <div>
      <ul>
        <li>
          Allows for both independent work and teamwork
        </li>
        <li>
          Allows for independent study and peer collaboration
        </li>
        <li>
          Has a strong mission
        </li>
        <li>
          Incorporates the natural environment
        </li>
        <li>
          Incorporates work with like-minded colleagues
        </li>
        <li>
          Is fueled by a strong mission
        </li>
        <li>
          Nurtures collaborations with others who share the same mission
        </li>
        <li>
          Offers a combination of autonomy and teamwork
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PersonalityBaseDetails renders component 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Complements
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Conflicts
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Best Work Environments
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="complements"
    >
      <option
        value="complements"
      >
        Complements
      </option>
      <option
        value="conflicts"
      >
        Conflicts
      </option>
      <option
        value="best_work_environments"
      >
        Best Work Environments
      </option>
    </select>
    <div>
      <div
        className="p"
      >
        You work well with humans
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityBaseDetails renders component with headers 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="sectionHeading"
    >
      Personality Details
    </div>
    <div
      className="tabs"
    >
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Complements
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Conflicts
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Best Work Environments
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="complements"
    >
      <option
        value="complements"
      >
        Complements
      </option>
      <option
        value="conflicts"
      >
        Conflicts
      </option>
      <option
        value="best_work_environments"
      >
        Best Work Environments
      </option>
    </select>
    <div>
      <div
        className="p"
      >
        You work well with humans
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityBaseDetails renders component with no environments 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Complements
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Conflicts
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="complements"
    >
      <option
        value="complements"
      >
        Complements
      </option>
      <option
        value="conflicts"
      >
        Conflicts
      </option>
    </select>
    <div>
      <div
        className="p"
      >
        You work well with humans
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityBaseDetails renders new type from clicking button 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Complements
      </button>
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Conflicts
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Best Work Environments
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="conflicts"
    >
      <option
        value="complements"
      >
        Complements
      </option>
      <option
        value="conflicts"
      >
        Conflicts
      </option>
      <option
        value="best_work_environments"
      >
        Best Work Environments
      </option>
    </select>
    <div>
      <div
        className="p"
      >
        You work poorly with aliens
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityBaseDetails renders new type from selecting option 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Complements
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Conflicts
      </button>
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Best Work Environments
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="best_work_environments"
    >
      <option
        value="complements"
      >
        Complements
      </option>
      <option
        value="conflicts"
      >
        Conflicts
      </option>
      <option
        value="best_work_environments"
      >
        Best Work Environments
      </option>
    </select>
    <div>
      <ul>
        <li>
          Home
        </li>
        <li>
          Sweeeeet
        </li>
        <li>
          Home?
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PersonalityBaseDetails renders nothing if disabled 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
/>
`;

exports[`PersonalityBaseDetails renders nothing if no details 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
/>
`;

exports[`PersonalityBaseDetails renders nothing if results not ready 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
/>
`;
